[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "susruta"
version = "0.1.0"
description = "System for Unified Graph-based Heuristic Recommendation Using Treatment Analytics"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=1.13.0",
    "torch-geometric>=2.2.0",
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "networkx>=2.8.0",
    "SimpleITK>=2.2.0",
    "matplotlib>=3.6.0",
    "scikit-learn>=1.1.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.6.0",
    "isort>=5.10.0",
    "mypy>=0.971",
    "ruff>=0.0.190",
    "memory-profiler>=0.60.0",
]
viz = [
    "nilearn>=0.9.0",
    "plotly>=5.10.0",
]

[project.urls]
"Homepage" = "https://github.com/TataSatyaPratheek/susruta"
"Bug Tracker" = "https://github.com/TataSatyaPratheek/susruta/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ["py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I"]
ignore = []